# rtes-ex2

./: .gitignore  CMakeLists.txt  Makefile  prod-cons.c
executables/: ex2_cons_1  ex2_cons_100  ex2_cons_15  ex2_cons_2  ex2_cons_25  ex2_cons_3  ex2_cons_35  ex2_cons_4  ex2_cons_5  ex2_cons_50  ex2_cons_75  ex2_p_15_QS_10  ex2_p_15_QS_100  ex2_p_15_QS_15  ex2_p_15_QS_25  ex2_p_15_QS_5  ex2_p_15_QS_50  ex2_p_15_QS_75  ex2_p_1_wall_time_100  ex2_p_1_wall_time_65  ex2_p_1_wall_time_70  ex2_p_1_wall_time_75  ex2_p_1_wall_time_80  ex2_p_1_wall_time_85  ex2_p_1_wall_time_90  ex2_p_1_wall_time_95  ex2_p_5_wall_time_13  ex2_p_5_wall_time_14  ex2_p_5_wall_time_15  ex2_p_5_wall_time_16  ex2_p_5_wall_time_17  ex2_p_5_wall_time_18  ex2_p_5_wall_time_19  ex2_p_5_wall_time_20  ex2_period_1  ex2_period_10  ex2_period_100  ex2_period_1000  ex2_period_10000  ex2_period_5
stats/: FUNCTION_WALL_TIME.xlsx  NUMBER_OF_CONSUMERS.xlsx  PERIOD.xlsx  SIZE_OF_QUEUE.xlsx  analyze_cons_NUMBER_OF_CONSUMERS.m  analyze_cons_PERIOD.m  analyze_cons_SIZE_OF_QUEUE.m  cons_2019_04_07_01_15_22_p_15_q_8_LOOP_360000_QS_15_function_2.txt  cons_2019_04_07_02_21_04_p_15_q_8_LOOP_360000_QS_5_function_2.txt  cons_2019_04_07_03_21_26_p_15_q_8_LOOP_360000_QS_10_function_2.txt  cons_2019_04_07_04_21_46_p_15_q_8_LOOP_360000_QS_20_function_2.txt  cons_2019_04_07_05_22_08_p_15_q_8_LOOP_360000_QS_25_function_2.txt  cons_2019_04_07_23_22_09_p_15_q_5_LOOP_360000_QS_15_function_2.txt  cons_2019_04_08_00_22_30_p_15_q_15_LOOP_360000_QS_15_function_2.txt  cons_2019_04_08_01_22_52_p_15_q_25_LOOP_360000_QS_15_function_2.txt  (+19 more)
(+20 files in other folders)
